# mata

./: .buildinfo  .clang-format  .clang-tidy  .clangd  .codacy.yml  .editorconfig  .envrc  .gitignore  .gitmodules  .travis.yml  .treefmt.toml  .typos.toml  AUTHORS.md  AUTOMATAFORMAT.md  BENCHMARKING.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  FORMAT.md  LICENSE  Makefile  README-WASM.md  README.md  VTF-code.md  afa.html  alphabet.html  applications.html  automata-format.html  benchmarking.html  branches.html  classlist.html  clean_gcda.sh  cmake_uninstall.cmake.in  codecov.yml  contributing.html  coverage-report.sh  darwin17-7.suppressions  filelist.html  flake.nix  gcovr.cfg  (+15 more)
bindings/python/: .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  alphabets.pxd  alphabets.pyx  configuration.py  cpynfa.pxd  example-drawing.ipynb  example.ipynb  libmata.pxd  libmata.pyx  mata.pxd  mata.pyx  pynfa.pxd  pynfa.pyx  pyproject.toml  requirements.txt  setup.py  spot_jupyter_helpers.py
cli/: CMakeLists.txt  MATA-CLI-philosophy.md  VATA-CLI-philosophy.md  interpreter.cc  mata  mata-code.cc  vata  vata-code.cc  vata.cc  version.cc.in
examples/: .gitignore  CMakeLists.txt  Makefile  example-01-ws1s-formulae.ipynb  example-02-redos-attacks.ipynb  example-03-exploring-maze.ipynb  example-jupyter.ipynb  example01-simple.cc  example01.cc  example02-determinize.cc  example03-complement.cc  example03-lang-empty.cc  example04-complement.cc  example05-parsing-afa.cc  example05-parsing-bv-nfa.cc  example05-parsing.cc  example05.mf  example06-mintermization.cc  example07-inclusion.cc  example07-learning.cc  nft-preimage.cc  nft.cc
examples/diff-sampler/: Makefile  diff-sampler.cc
examples/notebooks/: example-01-ws1s-formulae.ipynb  example-02-redos-attacks.ipynb  example-03-exploring-maze.ipynb  example-04-visualization.ipynb  run_papermill_examples.sh
examples/pcap-aut-diff/: Makefile  pcap-aut-diff.cc
examples/pcap-filter/: Makefile  pcap-filter.cc
examples/prob-lo-mizer/: Makefile  http-protocol-hosts-prob.mf  http-protocol-hosts.mf  http-protocol-prob.mf  http-protocol.vtf  prob-lo-mizer.cc
src/: CMakeLists.txt  alphabet.cc  bdd-domain.cc  bool-dispatch.cc  bool.hh  config.cc  config.cc.in  dispatch-aux.hh  explicit_lts_sim.cc  inter-aut.cc  metaprog.hh  mintermization-domain.cc  mintermization.cc  nfa-dispatch.cc  nfa-incl.cc  nfa-universal.cc  nfa.cc  parser-dispatch.cc  parser.cc  partition.cc  re2parser.cc  str-dispatch.cc  str.hh  tests-alphabet.cc  tests-main.cc  tests-mintermization.cc  tests-nfa-dispatch.cc  tests-nfa.cc  tests-number-predicate.cc  tests-ord-vector.cc  tests-parser-dispatch.cc  tests-parser.cc  tests-re2parser.cc  tests-synchronized-iterator.cc  tests-vm-dispatch.cc  tests-vm.cc  vm-dispatch.cc  vm.cc  void-dispatch.cc  void.hh
src/afa/: afa.cc  tests-afa.cc
src/cntnfa/: annotations.cc  builder.cc  cntnfa.cc  complement.cc  concatenation.cc  counters.cc  delta.cc  inclusion.cc  nfa.cc  operations.cc  product.cc  registers.cc  universal.cc
src/cntnfa-parser/: parser.cc
src/lvlfa/: builder.cc  complement.cc  concatenation.cc  inclusion.cc  intersection.cc  lvlfa.cc  operations.cc  strings.cc  universal.cc
src/nfa/: builder.cc  complement.cc  concatenation.cc  delta.cc  determinize.cc  inclusion.cc  intersection.cc  learning.cc  move.cc  nfa-complement.cc  nfa-concatenation.cc  nfa-dispatch.cc  nfa-incl.cc  nfa-inclusion.cc  nfa-intersection.cc  nfa-segmentation.cc  nfa-universal.cc  nfa.cc  noodlify.cc  operations.cc  post.cc  product.cc  reductionSimulation.cc  tests-nfa-concatenation.cc  tests-nfa-dispatch.cc  tests-nfa-intersection.cc  tests-nfa-profiling.cc  tests-nfa-segmentation.cc  tests-nfa.cc  tests-noodlify.cc  tests-synchronised_iterator.cc  tests-synchronized-iterator.cc  tests-synchronized_iterator.cc  universal.cc
src/nft/: builder.cc  complement.cc  composition.cc  concatenation.cc  inclusion.cc  intersection.cc  nft.cc  operations.cc  strings.cc  universal.cc
src/rra/: rrt.cc  tests-rrt.cc
src/strings/: nfa-noodlification.cc  nfa-segmentation.cc  nfa-strings.cc  noodlification.cc  replace.cc  segmentation.cc  strings.cc  tests-nfa-noodlification.cc  tests-nfa-segmentation.cc  tests-nfa-string-solving.cc
tests/: CMakeLists.txt  alphabet.cc  extendable-square-matrix.cc  main.cc  mintermization.cc  number-predicate.cc  ord-vector.cc  parser.cc  partition-relation-pair.cc  partition.cc  re2parser.cc  sparse-set.cc  synchronized-iterator.cc  tests-re2parser.cc  two-dimensional-map.cc
tests-integration/: CMakeLists.txt  README.md  pyco_proc  pycobench  pyproject.toml  requirements.txt
tests-integration/inputs/: bench-double-automata-inclusion.input.in  bench-double-bool-comb-cox.input.in  bench-quintuple-email-filter.input.in  bench-single-z3-noodler.input.in  bench-variadic-bool-comb-ere.input.in  bench-variadic-bool-comb-intersect.input.in  double-automata.input.in  double-large-sequence.input.in  double-state-explosion.input.in  single-automata.input.in
tests-integration/jobs/: bench-cade-23-merged.yaml.in  bench-cade-23.yaml.in  bench-simulation.yaml.in  corr-double-param-jobs-cntnfa.yaml.in  corr-double-param-jobs-merged.yaml.in  corr-double-param-jobs.yaml.in  corr-single-param-jobs.yaml.in  double-large-sequence.yaml.in  double-state-explosion.yaml.in  learning.yaml.in  test-cntnfa-double-param-jobs.yaml.in  test-cntnfa-double-state-explosion.yaml.in  test-cntnfa-single-param-jobs.yaml.in  test-simulation.yaml.in
tests-integration/scripts/: compare_profiles.py  process_pyco.sh  run_pyco.sh
tests-integration/src/: bench-automata-inclusion.cc  bench-automata-simulation.cc  bench-bool-comb-cox-diff.cc  bench-bool-comb-cox-inter.cc  bench-bool-comb-intersect.cc  bench-email-filter.cc  binary-operations.cc  determinize-bench.cc  nfa-operations.cc  reduce_epsilon.cc  test-learning.cc  test-unary-op.cc  testing-simulation.cc  trim.cc  unary-operations.cc
tests/afa/: afa.cc
tests/cntnfa/: annotations.cc  builder.cc  cntnfa.cc  delta.cc  utils.hh
tests/cntnfa-parser/: parser.cc
tests/lvlfa/: builder.cc  (+7 more)
(+1401 files in other folders)
