file(GLOB MATA_EXAMPLES "${CMAKE_CURRENT_SOURCE_DIR}/example*.cc")
foreach(MATA_EXAMPLE ${MATA_EXAMPLES})
    get_filename_component(MATA_EXAMPLE_NAME ${MATA_EXAMPLE} NAME_WE)
    add_executable(${MATA_EXAMPLE_NAME} ${MATA_EXAMPLE})
    target_link_libraries(${MATA_EXAMPLE_NAME} PRIVATE libmata)
endforeach()