file(GLOB_RECURSE MATA_EXAMPLES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.cc")
foreach(MATA_EXAMPLE ${MATA_EXAMPLES})
	file(RELATIVE_PATH MATA_EXAMPLE_REL "${CMAKE_CURRENT_SOURCE_DIR}" "${MATA_EXAMPLE}")
	string(REPLACE "/" "-" MATA_EXAMPLE_NAME "${MATA_EXAMPLE_REL}")
	string(REPLACE ".cc" "" MATA_EXAMPLE_NAME "${MATA_EXAMPLE_NAME}")
	add_executable(${MATA_EXAMPLE_NAME} ${MATA_EXAMPLE})
	target_link_libraries(${MATA_EXAMPLE_NAME} PRIVATE libmata)
endforeach()
