[project]
name = "libmata"
version = "0.1.0"
description = "Mata Python bindings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "coverage>=6.4.1",
  "cython>=0.29.32",
  "graphviz>=0.20.0",
  "ipykernel>=7.2.0",
  "ipython>=7.9.0",
  "networkx>=2.6.3",
  "pandas>=1.3.5",
  "papermill>=2.7.0",
  "pytest>=3.6.4",
  "pytest-cov>=3.0.0",
  "seaborn>=0.13.2",
  "setuptools>=82.0.1",
  "tabulate>=0.8.10",
]
[build-system]
requires = ["setuptools", "wheel", "Cython>=0.29.32"]
build-backend = "setuptools.build_meta"
